------------------------CVS after 3.00 beta 6----------------
NEW FEATURE:  Precise adjustment of timing window for each grade via the
	stepmania.ini file (see JudgeWindowPerfectPercent, JudgeWindowGreatPercent,
	etc).
OPTIMIZATION:  Better texture caching algorithm for faster loading of menus.
NEW FEATURE: Ez2SelectStyle ScrollingList Contents now Metric Configurable.
NEW FEATURE: PPP and PUMP use Ez2SelectStyle Menus to become more
	arcade-accurate.
NEW FEATURE: Ez2SelectStyle Menu Background Animations Metric Configurable
NEW FEATURE: ParaParaParadise Support
NEW FEATURE:  #TRANSLITERATION tag-- this is used in sorting
	so songs like sana & matsuri can go in the proper alphabetic group,
	but still be displayed in their proper language (once we support that)
NEW FEATURE:  DWI tree loading via "DWIPath".
NEW FEATURE:  Pump couples support.
BUG FIX:  Editor no longer crashes if you try to drag a hold note up
	before beat 0.
CHANGE:  Hold head now drawn in place tap note graphic when a Hold starts
	on the same row.
CHANGE:  Added bright ghost flash on hold note score of OK.
CHANGE:  Font format new easier to export for font creators.  See README 
	for details.
NEW FEATURE:  Option Icons.
NEW FEATURE:  Best sort now shows only top 30 songs.
NEW FEATURE:  Option codes on the Select Music and Select Course screens
	Codes are defined in the metrics.ini file and thus can be edited and
	changed per-theme.  The "Dedicated Menu Buttons" option does not 
	have to be enabled to use codes. 
NEW FEATURE:  SuperShuffle shuffles each individual note row.  This 
	makes for a completely different note pattern every time.
CHANGE:  Boost is now a separate option and can be combined with other 
	effects.
NEW FEATURE:  New Effects: Backwards and Tornado.
NEW FEATURE:  More informative crash dialog.
BUG FIX:  Fix editor saving files with an extra space at the end
	of the filename.
NEW FEATURE:  #SELECTABLE:YES, NO, ROULETTE.
NEW FEATURE:  Added assist tick toggle to editor.