@@ -87,7 +87,7 @@ ScreenEz2SelectStyle::ScreenEz2SelectStyle()
 	
 
 	m_Menu.Load( 	
-		THEME->GetPathTo("Graphics","select style background"), 
+		THEME->GetPathTo("BGAnimations","select style"), 
 		THEME->GetPathTo("Graphics","select style top edge"),
 		HELP_TEXT, true, true, TIMER_SECONDS
 		);
